--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "/"
 languageCode = "en-us"
 summaryLength = "10"
+relativeURLs = "true"
 theme = "kross-hugo"
 title = "Kross | Hugo Portfolio Template"
 [[menu.main]]
